[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/TabContainer.gd" type="Script" id=1]
[ext_resource path="res://Items/Item_OB1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Item_OB2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Item_OB3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Item_OB4.tscn" type="PackedScene" id=5]

[node name="Item_Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 397.0
margin_right = 1023.0
margin_bottom = 597.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OBset1" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/OBset1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OBset1/ScrollContainer"]
margin_right = 244.0
margin_bottom = 150.0

[node name="Item_OB1" parent="TabContainer/OBset1/ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 120.0
margin_bottom = 150.0

[node name="Item_OB2" parent="TabContainer/OBset1/ScrollContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 150.0

[node name="OBset2" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/OBset2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OBset2/ScrollContainer"]
margin_right = 244.0
margin_bottom = 150.0

[node name="Item_OB3" parent="TabContainer/OBset2/ScrollContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 120.0
margin_bottom = 150.0

[node name="Item_OB4" parent="TabContainer/OBset2/ScrollContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 120.0
margin_bottom = 150.0

[node name="OBset3" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/OBset3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OBset3/ScrollContainer"]
[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/OBset1/ScrollContainer" to="TabContainer" method="_on_ScrollContainer_mouse_entered"]
